fix cursor jitter on mobile

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -156,7 +156,7 @@ body.custom-cursor * {
 }
 
 .cursor {
-  position: fixed;
+  position: absolute;
   pointer-events: none;
   top: 0px;
   left: 0px;
